kustomize/workers/payment-worker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-worker
  namespace: workers
  labels:
    app: payment-worker
spec:
  replicas: 0
  selector:
    matchLabels:
      app: payment-worker
  template:
    metadata:
      labels:
        app: payment-worker
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: paymentservice-worker-sa
      containers:
        - name: payment-worker
          image: jukpozi/paymentservice:latest
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
